# Copyright 2024 Ant Group Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "yacl_cc_library")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "common",
    deps = [
        ":batch_encoder",
        ":he_kit",
        ":item_tool",
        ":keys",
        ":plain_encoder",
        ":pt_ct",
    ],
)

yacl_cc_library(
    name = "placeholder",
    hdrs = ["placeholder.h"],
    deps = [":keys"],
)

yacl_cc_library(
    name = "he_kit",
    hdrs = ["he_kit.h"],
    deps = [
        ":placeholder",
        "//heu/spi/he",
    ],
)

yacl_cc_library(
    name = "keys",
    srcs = ["keys.cc"],
    hdrs = ["keys.h"],
    deps = [
        "//heu/spi/he",
        "@fmt",
    ],
)

yacl_cc_library(
    name = "item_tool",
    hdrs = ["item_tool.h"],
    deps = [
        ":placeholder",
        "//heu/spi/he",
    ],
)

yacl_cc_library(
    name = "encoder",
    hdrs = ["encoder.h"],
    deps = ["//heu/spi/he"],
)

yacl_cc_library(
    name = "plain_encoder",
    hdrs = ["plain_encoder.h"],
    deps = [":encoder"],
)

yacl_cc_library(
    name = "batch_encoder",
    hdrs = ["batch_encoder.h"],
    deps = [":encoder"],
)

yacl_cc_library(
    name = "pt_ct",
    hdrs = ["pt_ct.h"],
)
