# Copyright 2024 Ant Group Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "yacl_cc_library")

yacl_cc_library(
    name = "scalar",
    visibility = ["//visibility:public"],
    deps = [
        ":decryptor",
        ":encryptor",
        ":item_tool",
        ":word_evaluator",
        "//heu/spi/he/sketches/common",
    ],
)

yacl_cc_library(
    name = "helpful_macros",
    hdrs = [
        "helpful_macros.h",
    ],
    deps = [
        "//heu/spi/he",
    ],
)

yacl_cc_library(
    name = "word_evaluator",
    hdrs = [
        "word_evaluator.h",
    ],
    deps = [
        ":helpful_macros",
    ],
)

yacl_cc_library(
    name = "encryptor",
    hdrs = [
        "encryptor.h",
    ],
    deps = [
        ":helpful_macros",
    ],
)

yacl_cc_library(
    name = "decryptor",
    hdrs = [
        "decryptor.h",
    ],
    deps = [
        ":helpful_macros",
    ],
)

yacl_cc_library(
    name = "item_tool",
    hdrs = [
        "item_tool.h",
    ],
    deps = [
        ":helpful_macros",
        "//heu/spi/he/sketches/common:item_tool",
        "@yacl//yacl/utils/spi/sketch",
    ],
)
