# Copyright 2024 Ant Group Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

yacl_cc_library(
    name = "phe",
    visibility = ["//visibility:public"],
    deps = [
        ":encoder",
        ":encryptor",
        ":he_kit",
        ":word_evaluator",
    ],
)

yacl_cc_library(
    name = "word_evaluator",
    hdrs = [
        "word_evaluator.h",
    ],
    deps = [
        "//heu/spi/he/sketches/scalar",
    ],
)

yacl_cc_library(
    name = "encryptor",
    hdrs = [
        "encryptor.h",
    ],
    deps = [
        "//heu/spi/he/sketches/scalar",
    ],
)

yacl_cc_library(
    name = "he_kit",
    hdrs = [
        "he_kit.h",
    ],
    deps = [
        "//heu/spi/he/sketches/scalar",
    ],
)

yacl_cc_library(
    name = "encoder",
    hdrs = [
        "scaled_batch_encoder.h",
        "scaled_plain_encoder.h",
    ],
    deps = [
        "//heu/spi/he/sketches/scalar",
    ],
)

yacl_cc_test(
    name = "batch_encoder_test",
    srcs = [
        "scaled_batch_encoder_test.cc",
    ],
    deps = [
        ":encoder",
        "@yacl//yacl/math/mpint",
    ],
)
