load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

yacl_cc_library(
    name = "test_util",
    hdrs = [
        "test_util.h",
    ],
    deps = [
        "//heu/spi/he/sketches/scalar",
    ],
)

yacl_cc_test(
    name = "scalar_call_test",
    srcs = ["scalar_call_test.cc"],
    deps = [
        ":test_util",
    ],
)

yacl_cc_test(
    name = "vec_call_test",
    srcs = ["vec_call_test.cc"],
    deps = [
        ":test_util",
    ],
)

yacl_cc_test(
    name = "encryptor_test",
    srcs = [
        "test_encryptor.cc",
    ],
    deps = [
        ":test_util",
    ],
)

yacl_cc_test(
    name = "decryptor_test",
    srcs = [
        "test_decryptor.cc",
    ],
    deps = [
        ":test_util",
    ],
)
