load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

yacl_cc_library(
    name = "dummy_lib",
    hdrs = [
        "dummy_encoder.h",
        "dummy_hekit.h",
        "dummy_ops.h",
    ],
    deps = [
        "//heu/spi/he/sketches/common",
        "//heu/spi/he/sketches/scalar",
    ],
)

yacl_cc_test(
    name = "scalar_call_test",
    srcs = ["scalar_call_test.cc"],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "vec_call_test",
    srcs = ["vec_call_test.cc"],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "encoder_test",
    srcs = [
        "test_encoder.cc",
    ],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "encryptor_test",
    srcs = [
        "test_encryptor.cc",
    ],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "decryptor_test",
    srcs = [
        "test_decryptor.cc",
    ],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "hekit_test",
    srcs = [
        "test_hekit.cc",
    ],
    deps = [
        ":dummy_lib",
    ],
)
