# Copyright 2024 Ant Group Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

yacl_cc_library(
    name = "dummy_lib",
    hdrs = [
        "dummy_encoder.h",
        "dummy_hekit.h",
        "dummy_ops.h",
    ],
    deps = [
        "//heu/spi/he/sketches/common",
        "//heu/spi/he/sketches/scalar",
    ],
)

yacl_cc_test(
    name = "scalar_call_test",
    srcs = ["scalar_call_test.cc"],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "vec_call_test",
    srcs = ["vec_call_test.cc"],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "encoder_test",
    srcs = [
        "test_encoder.cc",
    ],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "encryptor_test",
    srcs = [
        "test_encryptor.cc",
    ],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "decryptor_test",
    srcs = [
        "test_decryptor.cc",
    ],
    deps = [
        ":dummy_lib",
    ],
)

yacl_cc_test(
    name = "hekit_test",
    srcs = [
        "test_hekit.cc",
    ],
    deps = [
        ":dummy_lib",
    ],
)
